--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "node-backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "keywords": [
     "javascript"
   ],
   "license": "ISC",
   "author": "Raushan Tiwari",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
