--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URL=mongodb+srv://raushantiwari9523:your-password@cluster0.nw6h0ka.mongodb.net
+MONGODB_URL=mongodb+srv://username:your-password@cluster0.nw6h0ka.mongodb.net
